# cr3st4n1

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SPEC.md  did-method-m3m3tic.md  reference-impl.rs  schema.json
.github/workflows/: ci.yml
benches/: signing.rs
case-studies/: bonfire-terminal-issuance.md  operator-alpha.cr3st4n1
examples/: ai-agent.cr3st4n1  full.cr3st4n1  human-distributor.cr3st4n1  minimal.cr3st4n1  verify.py
src/: lib.rs  schema.rs  signing.rs  types.rs
tests/: cli.rs  edge_cases.rs  roundtrip.rs
