[package]
name = "cr3st4n1"
version = "1.0.0-rc.1"
edition = "2021"
license = "Apache-2.0"
description = "Ed25519 credential signing and verification for .cr3st4n1 identity files"
repository = "https://github.com/johncrestani1/cr3st4n1"

[lib]
name = "cr3st4n1"
path = "src/lib.rs"

[[bin]]
name = "cr3st4n1"
path = "src/bin/cr3st4n1.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap"]

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
jsonschema = "0.18"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
thiserror = "1"
clap = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "signing"
harness = false
